Fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,6 @@
 
 @layer base {
   body {
-    @apply font-primary text-primary;
+    @apply overflow-x-hidden font-primary text-primary;
   }
 }
